# SOWsmith-Agents-League-Hackathon

./: README.md
SOWsmith/: .env.example  .gitignore  BidPackage-Template.docx  Makefile  project guide.txt  pyproject.toml  requirements.txt
SOWsmith/.github/workflows/: ci.yml
SOWsmith/agent/: README.md
SOWsmith/agent/tests/: test_award.py  test_engine.py  test_ocr.py  test_spine.py  test_webapp.py
SOWsmith/approval-workflow/: README.md  adaptive-card-input.json  adaptive-card-review.json  flow-definition.md
SOWsmith/copilot-studio/: README.md  knowledge-scoping.md  system-prompt-SOWsmith.txt  system-prompt.txt  topics-and-trigger-phrases.md
SOWsmith/docs/: ARCHITECTURE.md  BIDDING-LIFECYCLE.md  BUILD-RUNBOOK.md  COMPANY-CONTEXT.md  DEPLOYMENT-CHECKLIST.md  EVALUATION.md  MANUAL-SETUP.md  PHASE-B-SETTINGS.md  PRESENTATION-BRIEF.md  PROBLEM-AND-APPROACH.md  README.md  ROADMAP.md  WHAT-HAS-BEEN-DONE.md
SOWsmith/docs/assets/: Bid-Package-Generator_Architecture_Diagram.html
SOWsmith/docs/examples/: README.md  sample-AWARD-RECOMMENDATION.md  sample-QA.md  sample-RFP_STANDARD.md  sample-SOW_LEGAL-REVIEW.md  sample-SOW_STANDARD.md  sample-bids_Pipeline-Construction.json
SOWsmith/frontend/: README.md
SOWsmith/frontend/web-console/: app.js  index.html  styles.css
SOWsmith/infrastructure/: README.md
SOWsmith/infrastructure/sharepoint/: Provision-SharePoint.ps1  columns.md  provision-m365cli.sh  reviewers-SOWsmith-POC.csv
SOWsmith/knowledge-base/: README.md
SOWsmith/knowledge-base/generator/: _build_knowledge_base.py
(+45 files in other folders)
